--- a/default-nexus.yml
+++ b/default-nexus.yml
@@ -45,18 +45,22 @@ security:
         repository: docker-proxy
         actions: read,update
   roles:
-    - id: repository-read-docker
+    - id: ui-minimal
       enabled: true
       source: default
-      name: repository-read-docker
-      description: "Docker Anonymous Access for public proxy / group repositories"
+      name: ui-minimal
+      description: "UI Minimal"
       privileges:
         - nx-healthcheck-read
-        - nx-repository-view-docker-docker-browse
+        - nx-search-read
+    - id: repository-read-docker-proxy
+      enabled: true
+      source: default
+      name: repository-read-docker-proxy
+      description: "Docker Anonymous Access for public proxy repository"
+      privileges:
         - nx-repository-view-docker-docker-proxy-browse
         - nx-repository-view-docker-docker-proxy-read
-        - nx-repository-view-docker-docker-read
-        - nx-search-read
     - id: repository-read-all
       enabled: true
       source: default
@@ -64,10 +68,8 @@ security:
       description: "Read All permission for repositories"
       privileges:
         - nx-apikey-all
-        - nx-healthcheck-read
         - nx-repository-view-*-*-browse
         - nx-repository-view-*-*-read
-        - nx-search-read
     - id: repository-write-all
       enabled: true
       source: default
@@ -75,9 +77,7 @@ security:
       description: "Write All permission for repositories"
       privileges:
         - nx-apikey-all
-        - nx-healthcheck-read
         - nx-repository-view-*-*-*
-        - nx-search-read
     - id: repository-read-nodejs-dist
       enabled: true
       source: default
@@ -95,7 +95,9 @@ security:
       email: anonymous@example.org
       roles:
         - source: "default"
-          role: repository-read-docker
+          role: ui-minimal
+        - source: "default"
+          role: repository-read-docker-proxy
         - source: "default"
           role: repository-read-nodejs-dist
     - username: johndoe
@@ -114,6 +116,8 @@ security:
       updateExistingPassword: false
       email: janedoe@example.org
       roles:
+        - source: "default"
+          role: ui-minimal
         - source: "default"
           role: repository-write-all
 repository:
