chore(tools): upgrade tools and hooks

--- a/.envrc
+++ b/.envrc
@@ -1,20 +1,24 @@
-asdf_has docker-compose || asdf plugin add docker-compose https://github.com/virtualstaticvoid/asdf-docker-compose.git
-asdf_has java || asdf add plugin java
-asdf_has maven || asdf add plugin maven
-asdf_has python || asdf add plugin python
-asdf install
+watch_file .tool-versions
+
+asdf_has docker-compose || asdf plugin-add docker-compose https://github.com/virtualstaticvoid/asdf-docker-compose.git
+asdf_has editorconfig-checker || asdf plugin-add editorconfig-checker
+asdf_has hadolint || asdf plugin-add hadolint
+asdf_has java || asdf plugin-add java
+# asdf_has maven || asdf plugin-add maven
+asdf_has python || asdf plugin-add python
+asdf_has shellcheck || asdf plugin-add shellcheck
+asdf_has shfmt || asdf plugin-add shfmt
+asdf install | sed '/is already installed/d'
 use asdf
 
 layout python-venv
 
 use pipx
 has pre-commit \
-  || pipx install pre-commit
+  || pipx install 'pre-commit>=2.19.0'
 has detect-secrets \
-  || pipx install detect-secrets
+  || pipx install 'detect-secrets>=1.2.0'
 
 use pre-commit
 
-watch_file .tool-versions
-
-export JAVA_HOME="$(dirname "$(dirname "$(expand_path "$(asdf which java)" "/")")")"
+#export JAVA_HOME="$(dirname "$(dirname "$(expand_path "$(asdf which java)" "/")")")"
