--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - run: mvn -B verify --file pom.xml
+      - run: ./mvnw -B verify --file pom.xml
       - run: mkdir staging && cp target/*.{k,j}ar staging
       - uses: actions/upload-artifact@v2
         with:
