--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ default_stages:
   - commit
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks.git
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
         files: \.(conf|j2|js|json|rb|md|py|sh|tf|tm?pl|txt|yaml|yml)$
@@ -13,11 +13,11 @@ repos:
       - id: end-of-file-fixer
         exclude: '^(\.idea/.*|password_.*|src/test/resources/test)$'
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.26.3
+    rev: v1.29.0
     hooks:
       - id: yamllint
   - repo: https://github.com/Yelp/detect-secrets.git
-    rev: v1.2.0
+    rev: v1.4.0
     hooks:
       - id: detect-secrets
         args:
@@ -25,7 +25,7 @@ repos:
           - '.secrets.baseline'
         exclude: 'package-lock\.json$|Pipfile\.lock$|poetry\.lock$|^.secrets.baseline$'
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 2.1.6
+    rev: 3.0.0
     hooks:
       - id: shellcheck
         exclude: 'gradlew|mvnw$'
@@ -34,11 +34,11 @@ repos:
         args:
           - '-i 2 -ci -bn -sr'
   - repo: https://github.com/hadolint/hadolint
-    rev: v2.10.0
+    rev: v2.12.1-beta
     hooks:
       - id: hadolint
   - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
-    rev: 2.4.0
+    rev: 2.6.2
     hooks:
       - id: editorconfig-checker-system
         alias: ec
