feat: Nexus to 3.58.1
* switch to Nexus 3.58.1
* update tooling

--- a/.envrc
+++ b/.envrc
@@ -12,7 +12,7 @@ use asdf
 
 layout python-venv
 
-use pipx
+has pipx || use pipx
 has pre-commit \
   || pipx install 'pre-commit>=2.20.0'
 has detect-secrets \
