--- a/pom.xml
+++ b/pom.xml
@@ -5,25 +5,26 @@
     <parent>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-plugins</artifactId>
-        <version>3.51.0-01</version>
+        <version>3.58.1-01</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.weareadaptive.nexus</groupId>
     <artifactId>nexus-casc-plugin</artifactId>
-    <version>3.51.0-01</version>
+    <version>3.58.1-01</version>
     <packaging>bundle</packaging>
 
     <properties>
-        <nexus.docker.version>3.51.0</nexus.docker.version>
+        <nexus.docker.version>3.58.1</nexus.docker.version>
 
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <maven-enforcer-plugin.version>3.3.0</maven-enforcer-plugin.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <docker-compose-maven-plugin.version>4.0.0</docker-compose-maven-plugin.version>
 
         <snakeyaml.version>1.33</snakeyaml.version>
 
-        <junit-jupiter.version>5.6.2</junit-jupiter.version>
+        <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <system-lambda.version>1.2.0</system-lambda.version>
 
         <kar.finalName>${project.artifactId}-${project.version}</kar.finalName>
@@ -131,6 +132,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+                <version>${maven-enforcer-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>enforce-dependency-convergence</id>
