--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'adopt'
       - run: ./mvnw -B verify --file pom.xml
       - run: mkdir staging && cp target/*.{k,j}ar staging
       - uses: actions/upload-artifact@v2
